# wavefront

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  build.rs  index.html  index.scss  save.json
.cargo/: config.toml
.github/workflows/: deploy.yml  rust.yml
assets/: icon.rc
assets/shaders/: calc.wgsl  simple.wgsl  source.wgsl  tlm_calc.wgsl  update.wgsl
examples/: slit.json  wave_wall.json  wavefront-1kHz.json  wavefront-300Hz.json  wavefront-30Hz.json  wavefront-3kHz.json
scripts/: mic_0.csv  mic_fft.py
src/: components.rs  constants.rs  events.rs  grid.rs  input.rs  lib.rs  loading.rs  main.rs  render.rs  saving.rs  undo.rs
src/components/: gizmo.rs  microphone.rs  mod.rs  source.rs  states.rs  wall.rs
src/grid/: grid.rs  mod.rs  plugin.rs  systems.rs
src/input/: events.rs  input.rs  mod.rs  plugin.rs  systems.rs
src/math/: constants.rs  fft.rs  filter.rs  mod.rs  rect.rs  transformations.rs
src/render/: dialog.rs  draw.rs  gradient.rs  mod.rs  plugin.rs  screenshot.rs  state.rs  ui.rs
src/simulation/: grid.rs  plugin.rs  systems.rs
src/ui/: dialog.rs  draw.rs  fps.rs  help.rs  keybinds.rs  loading.rs  mod.rs  plugin.rs  preferences.rs  saving.rs  state.rs  tabs.rs
src/ui/panels/: general_settings.rs  mod.rs  outline.rs  tool_options.rs  tool_panel.rs
