[package]
name = "wavefront"
version = "1.0.0-alpha.2"
edition = "2021"

[dependencies]
bevy_file_dialog = "0.4.0"
bevy_pixel_buffer = { version = "0.7.0", features = ["egui"] }
egui_extras = { version = "0.26.2", features = ["image"] }
image = { version = "0.25.0", features = [
    "png",
    "rayon",
], default-features = false }
egui_plot = "0.26.2"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.8.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
spectrum-analyzer = "1.5.0"
egui_dock = "0.11.4"
plotters = { version = "0.3.5", default-features = false, features = [
    "svg_backend",
    "line_series",
] }

[dependencies.egui]
version = "*"
features = ["serde"]

[dependencies.bevy]
version = "0.13"
default-features = false
features = [
    "multi-threaded",

    "bevy_winit",
    "bevy_render",

    "png",

    "x11",
    "wayland",

    # "subpixel_glyph_atlas",
    "serialize",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
