[package]
name = "wavefront"
version = "1.0.0-alpha.7"
edition = "2021"

[dependencies]
bevy_file_dialog = "0.4.0"
bevy_pixel_buffer = { version = "0.7.2", features = ["egui"] }
egui_extras = { version = "0.27.2", features = ["image"] }
image = { version = "0.25.0", features = [
    "png",
    "rayon",
], default-features = false }
egui_plot = "0.27.2"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.8.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
spectrum-analyzer = "1.5.0"
egui_dock = "0.12.0"
plotters = { version = "0.3.5", default-features = false, features = [
    "svg_backend",
    "line_series",
] }
winit = "0.29.15"

[dependencies.egui]
version = "*"
features = ["serde"]

[dependencies.bevy]
version = "0.13.2"
default-features = false
features = [
    "multi-threaded",
    "bevy_winit",
    "bevy_render",
    "png",
    "x11",
    "wayland",
    "serialize",
    "webgpu",
]

[build-dependencies]
embed-resource = "2.4.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
