[package]
name = "wavefront"
version = "1.0.2"
edition = "2021"

[dependencies]
bevy_file_dialog = "0.6"
bevy_pixel_buffer = { git = "https://github.com/ecrax/bevy_pixel_buffer.git", branch = "bevy_egui_0.30", features = ["egui"] }
egui_extras = { version = "0.29", features = ["image"] }
image = { version = "0.25.0", features = [
    "png",
    "rayon",
], default-features = false }
egui_plot = "0.29"
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.8.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.114"
spectrum-analyzer = "1.5.0"
egui_dock = "0.14"
plotters = { version = "0.3.5", default-features = false, features = [
    "svg_backend",
    "line_series",
] }
winit = "0.30"
csv = "1.3.0"
egui = { version = "0.29", features = ["serde"] }
bevy = { version = "0.14.2", default-features = false, features = [
    "multi_threaded",
    "bevy_winit",
    "bevy_render",
    "png",
    "x11",
    "wayland",
    "serialize",
    "webgpu",
] }
hound = "3.5.1"

[build-dependencies]
embed-resource = "2.4.2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
